k8s/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - port: 53
      targetPort: dns
      protocol: TCP
      name: dns-tcp
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - port: 80
      targetPort: web
      protocol: TCP
